# Church-of-GTA-bot

./: .breakpoints  .gitignore  .replit  README.md  gta_keywords.py  main.py  pyproject.toml  replit.nix  users.csv  users_file_names.csv
old/users/: church_of_gta.csv  gta_7.csv
split_vid/: split_vid.py
users/: cgrand_ta.csv  sam_houser_house.csv
